--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         <button class="btn bg-bike-primary text-white">Purchase</button>
                     </div>
                     <div class="flex-1">
-                        <img src="/images/slider/bike1.png" class="w-[400px]" />
+                        <img src="images/slider/bike1.png" class="w-[400px]" />
                     </div>
                 </div>
                 <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
@@ -102,7 +102,7 @@
                         <button class="btn bg-bike-primary text-white">Purchase</button>
                     </div>
                     <div class="flex-1">
-                        <img src="/images/slider/bike2.png" class="w-[400px]" />
+                        <img src="images/slider/bike2.png" class="w-[400px]" />
                     </div>
                 </div>
                 <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
@@ -125,7 +125,7 @@
                         <button class="btn bg-bike-primary text-white">Purchase</button>
                     </div>
                     <div class="flex-1">
-                        <img src="/images/slider/bike3.png" class="w-[400px]" />
+                        <img src="images/slider/bike3.png" class="w-[400px]" />
                     </div>
                 </div>
                 <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
@@ -148,7 +148,7 @@
                         <button class="btn bg-bike-primary text-white">Purchase</button>
                     </div>
                     <div class="flex-1">
-                        <img src="/images/slider/bike4.png" class="w-[400px]" />
+                        <img src="images/slider/bike4.png" class="w-[400px]" />
                     </div>
                 </div>
                 <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
@@ -169,7 +169,7 @@
             <div class="grid gap-5 grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
                 <!-- first card -->
                 <div class="card bg-base-100 shadow-xl">
-                    <figure><img src="/images/others/latest1.png" alt="Shoes" /></figure>
+                    <figure><img src="images/others/latest1.png" alt="Shoes" /></figure>
                     <div class="card-body">
                         <h2 class="card-title text-3xl">Ducati XDIAVEL S-73</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed
@@ -181,7 +181,7 @@
                 </div>
                 <!-- second card -->
                 <div class="card bg-base-100 shadow-xl">
-                    <figure><img src="/images/others/latest2.png" alt="Shoes" /></figure>
+                    <figure><img src="images/others/latest2.png" alt="Shoes" /></figure>
                     <div class="card-body">
                         <h2 class="card-title text-3xl">Ducati XDIAVEL S-73</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed
@@ -193,7 +193,7 @@
                 </div>
                 <!-- third card -->
                 <div class="card bg-base-100 shadow-xl">
-                    <figure><img src="/images/others/latest3.png" alt="Shoes" /></figure>
+                    <figure><img src="images/others/latest3.png" alt="Shoes" /></figure>
                     <div class="card-body">
                         <h2 class="card-title text-3xl">Ducati XDIAVEL S-73</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed
@@ -212,7 +212,7 @@
             <div class="grid gap-10 grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
                 <!-- first review -->
                 <div class="card bg-base-100 p-9 border border-gray-400">
-                    <figure><img class="w-36" src="/images/others/user-1.png" alt="Shoes" /></figure>
+                    <figure><img class="w-36" src="images/others/user-1.png" alt="Shoes" /></figure>
                     <div class="card-body">
                         <p>Slate helps you see how
                             many more days you need
@@ -233,7 +233,7 @@
                 </div>
                 <!-- second review -->
                 <div class="card bg-base-100 p-9 border border-gray-400">
-                    <figure><img class="w-36" src="/images/others/user-2.png" alt="Shoes" /></figure>
+                    <figure><img class="w-36" src="images/others/user-2.png" alt="Shoes" /></figure>
                     <div class="card-body">
                         <p>Slate helps you see how
                             many more days you need
@@ -254,7 +254,7 @@
                 </div>
                 <!-- third review -->
                 <div class="card bg-base-100 p-9 border border-gray-400">
-                    <figure><img class="w-36" src="/images/others/user-3.png" alt="Shoes" /></figure>
+                    <figure><img class="w-36" src="images/others/user-3.png" alt="Shoes" /></figure>
                     <div class="card-body">
                         <p>Slate helps you see how
                             many more days you need
@@ -281,7 +281,7 @@
                     class="text-bike-primary">Questions</span></h3>
             <div class="hero">
                 <div class="hero-content flex-col lg:gap-24 lg:flex-row">
-                    <img src="/images/others/faq.png" class="w-3/4 lg:max-w-sm rounded-lg shadow-2xl" />
+                    <img src="images/others/faq.png" class="w-3/4 lg:max-w-sm rounded-lg shadow-2xl" />
                     <div>
                         <!-- first question -->
                         <div class="collapse collapse-arrow ">
