--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap"
         rel="stylesheet">
-        
+
     <style>
         .font-poppins {
             font-family: 'Poppins', sans-serif;
@@ -340,20 +340,42 @@
             </div>
         </section>
     </main>
-    <footer class="footer p-10 bg-neutral text-neutral-content">
-        <div>
 
-            <p>ACME Industries Ltd.<br />Providing reliable tech since 1992</p>
+    <footer class="footer p-10 bg-base-200 text-base-content">
+        <div>
+            <span class="footer-title">Services</span>
+            <a class="link link-hover">Branding</a>
+            <a class="link link-hover">Design</a>
+            <a class="link link-hover">Marketing</a>
+            <a class="link link-hover">Advertisement</a>
         </div>
         <div>
-            <span class="footer-title">Social</span>
-            <div class="grid grid-cols-1 gap-4">
-                <a><img class="w-36" src="images/others/android.png" alt=""></a>
-                <a><img class="w-36" src="images/others/ios.png" alt=""></a>
-
+            <span class="footer-title">Company</span>
+            <a class="link link-hover">About us</a>
+            <a class="link link-hover">Contact</a>
+            <a class="link link-hover">Jobs</a>
+            <a class="link link-hover">Press kit</a>
+        </div>
+        <div>
+            <span class="footer-title">Legal</span>
+            <a class="link link-hover">Terms of use</a>
+            <a class="link link-hover">Privacy policy</a>
+            <a class="link link-hover">Cookie policy</a>
+        </div>
+        <div>
+            <span class="footer-title">Newsletter</span>
+            <div class="form-control w-80">
+                <label class="label">
+                    <span class="label-text">Enter your email address</span>
+                </label>
+                <div class="relative">
+                    <input type="text" placeholder="username@site.com" class="input input-bordered w-full pr-16" />
+                    <button class="btn btn-primary absolute top-0 right-0 rounded-l-none">Subscribe</button>
+                </div>
             </div>
         </div>
     </footer>
+    
 </body>
 
 </html>
